--- a/test-output/old/Suite/methods-alphabetical.html
+++ b/test-output/old/Suite/methods-alphabetical.html
@@ -1,24 +1,26 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="706f79">  <td>24/11/12 06:07:47</td>   <td>0</td> <td title="&gt;&gt;baseClass.ExtentReport()[pri:0, instance:TestCases.registerTestCases@7e07db1f]">&gt;&gt;ExtentReport</td> 
+<tr bgcolor="8885ab">  <td>24/11/16 10:29:02</td>   <td>0</td> <td title="&gt;&gt;baseClass.ExtentReport()[pri:0, instance:TestCases.registerTestCases@564fabc8]">&gt;&gt;ExtentReport</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1159190947</td>   <td></td> </tr>
-<tr bgcolor="e9adcf">  <td>24/11/12 06:07:48</td>   <td>692</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTestCases.VerifyLoginWithvalidData()[pri:0, instance:TestCases.LoginTestCases@8f4ea7c]">VerifyLoginWithvalidData</td> 
+<tr bgcolor="c7b6bd">  <td>24/11/16 10:29:25</td>   <td>23343</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTestCases.VerifyLoginWithvalidData()[pri:0, instance:TestCases.LoginTestCases@3febb011]">VerifyLoginWithvalidData</td> 
   <td>main@1159190947</td>   <td></td> </tr>
-<tr bgcolor="706f79">  <td>24/11/12 06:07:48</td>   <td>672</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;baseClass.browserClose()[pri:0, instance:TestCases.registerTestCases@7e07db1f]">&lt;&lt;browserClose</td> 
-<td>&nbsp;</td>  <td></td>   <td></td> </tr>
-<tr bgcolor="706f79">  <td>24/11/12 06:07:48</td>   <td>672</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;baseClass.browserClose()[pri:0, instance:TestCases.registerTestCases@7e07db1f]">&lt;&lt;browserClose</td> 
-<td>&nbsp;</td>  <td></td>   <td></td> </tr>
-<tr bgcolor="706f79">  <td>24/11/12 06:07:48</td>   <td>709</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;baseClass.browserClose()[pri:0, instance:TestCases.LoginTestCases@8f4ea7c]">&lt;&lt;browserClose</td> 
-<td>&nbsp;</td>  <td></td>   <td></td> </tr>
-<tr bgcolor="706f79">  <td>24/11/12 06:07:48</td>   <td>644</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;baseClass.browserlaunch(java.lang.String)[pri:0, instance:TestCases.registerTestCases@7e07db1f]">&gt;&gt;browserlaunch</td> 
-<td>&nbsp;</td>  <td></td>   <td></td> </tr>
-<tr bgcolor="706f79">  <td>24/11/12 06:07:48</td>   <td>644</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;baseClass.browserlaunch(java.lang.String)[pri:0, instance:TestCases.registerTestCases@7e07db1f]">&gt;&gt;browserlaunch</td> 
-<td>&nbsp;</td>  <td></td>   <td></td> </tr>
-<tr bgcolor="706f79">  <td>24/11/12 06:07:48</td>   <td>816</td> <td title="&lt;&lt;baseClass.endReport()[pri:0, instance:TestCases.registerTestCases@7e07db1f]">&lt;&lt;endReport</td> 
+<tr bgcolor="8885ab">  <td>24/11/16 10:29:18</td>   <td>15916</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;baseClass.browserClose()[pri:0, instance:TestCases.registerTestCases@564fabc8]">&lt;&lt;browserClose</td> 
+<td>&nbsp;</td>  <td>main@1159190947</td>   <td></td> </tr>
+<tr bgcolor="8885ab">  <td>24/11/16 10:29:27</td>   <td>25140</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;baseClass.browserClose()[pri:0, instance:TestCases.LoginTestCases@3febb011]">&lt;&lt;browserClose</td> 
+<td>&nbsp;</td>  <td>main@1159190947</td>   <td></td> </tr>
+<tr bgcolor="8885ab">  <td>24/11/16 10:29:18</td>   <td>15916</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;baseClass.browserClose()[pri:0, instance:TestCases.registerTestCases@564fabc8]">&lt;&lt;browserClose</td> 
+<td>&nbsp;</td>  <td>main@1159190947</td>   <td></td> </tr>
+<tr bgcolor="8885ab">  <td>24/11/16 10:29:11</td>   <td>9401</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;baseClass.browserlaunch(java.lang.String)[pri:0, instance:TestCases.registerTestCases@564fabc8]">&gt;&gt;browserlaunch</td> 
+<td>&nbsp;</td>  <td>main@1159190947</td>   <td></td> </tr>
+<tr bgcolor="8885ab">  <td>24/11/16 10:29:11</td>   <td>9401</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;baseClass.browserlaunch(java.lang.String)[pri:0, instance:TestCases.registerTestCases@564fabc8]">&gt;&gt;browserlaunch</td> 
+<td>&nbsp;</td>  <td>main@1159190947</td>   <td></td> </tr>
+<tr bgcolor="8885ab">  <td>24/11/16 10:29:18</td>   <td>15920</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;baseClass.browserlaunch(java.lang.String)[pri:0, instance:TestCases.LoginTestCases@3febb011]">&gt;&gt;browserlaunch</td> 
+<td>&nbsp;</td>  <td>main@1159190947</td>   <td></td> </tr>
+<tr bgcolor="8885ab">  <td>24/11/16 10:29:27</td>   <td>25216</td> <td title="&lt;&lt;baseClass.endReport()[pri:0, instance:TestCases.registerTestCases@564fabc8]">&lt;&lt;endReport</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1159190947</td>   <td></td> </tr>
-<tr bgcolor="c5ccac">  <td>24/11/12 06:07:48</td>   <td>588</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="registerTestCases.verifyRegsiterationWithValidData()[pri:0, instance:TestCases.registerTestCases@7e07db1f]">verifyRegsiterationWithValidData</td> 
+<tr bgcolor="9fe9b6">  <td>24/11/16 10:29:08</td>   <td>6188</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="registerTestCases.verifyRegsiterationWithValidData()[pri:0, instance:TestCases.registerTestCases@564fabc8]">verifyRegsiterationWithValidData</td> 
   <td>main@1159190947</td>   <td></td> </tr>
-<tr bgcolor="c5ccac">  <td>24/11/12 06:07:48</td>   <td>654</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="registerTestCases.verifyregisterationwithinvaliddata()[pri:0, instance:TestCases.registerTestCases@7e07db1f]">verifyregisterationwithinvaliddata</td> 
+<tr bgcolor="9fe9b6">  <td>24/11/16 10:29:15</td>   <td>12788</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="registerTestCases.verifyregisterationwithinvaliddata()[pri:0, instance:TestCases.registerTestCases@564fabc8]">verifyregisterationwithinvaliddata</td> 
   <td>main@1159190947</td>   <td></td> </tr>
 </table>
